# netcpp.new

./: .gitignore  CMakeLists.txt  README
doc/: doxygen.conf
include/: abstract_socket.hpp  doxygen.hpp  logger.hpp
include/platform/posix/: dgram_local.hpp  posix_socket.hpp  stream_local.hpp  tcp_ip.hpp  udp_ip.hpp
src/: CMakeLists.txt  abstract_socket.cpp  logger.cpp
src/platform/posix/: posix_socket.cpp
test/: CMakeLists.txt  main.cpp
